--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>2.8.6</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.17</version>
+        </dependency>
+
     </dependencies>
 
 </project>
